uClibc: add patches for user context support
These patch series contain user context support for ARM,
i386 and x86_64. I have pulled them from the ucontext2
branch on https://github.com/ffainelli/uClibc/tree/ucontext

The same set of patches will apply against 0.9.33.2.

Signed-off-by: Sven Neumann <s.neumann@raumfeld.com>

--- a/toolchain/toolchain-buildroot/Config.in.2
+++ b/toolchain/toolchain-buildroot/Config.in.2
@@ -66,6 +66,14 @@ config BR2_TOOLCHAIN_BUILDROOT_USE_SSP
 	  See http://www.linuxfromscratch.org/hints/downloads/files/ssp.txt
 	  for details.
 
+config BR2_TOOLCHAIN_BUILDROOT_CONTEXT_FUNCS
+	bool "Enable the obsolescent functions used for context control"
+        depends on BR2_UCLIBC_VERSION_0_9_32
+	help
+	  Enable this option if you want your toolchain to support the
+	  setcontext family of functions used for context control. These
+	  functions are: setcontext, getcontext, makecontext, swapcontext.
+
 choice
 	prompt "Thread library implementation"
 	default BR2_PTHREADS_NATIVE if (!BR2_UCLIBC_VERSION_0_9_31) && !BR2_ARM_OABI && !(BR2_avr32 || BR2_xtensa)
